--- a/01-gallery.html
+++ b/01-gallery.html
@@ -13,7 +13,9 @@
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
-    <div class="gallery"></div>
+    <div>
+      <ul class="gallery"></ul>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
     
